# dstutor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/sample_datasets/: README.md  employees.csv  employees.tsv  inventory.txt  products.csv  products.json  sales.csv  students.csv  survey_data.csv  weather.csv
docs/: AI_DEVELOPMENT_GUIDE.md  DESIGN.md  FOUNDATIONS_STATUS.md  GETTING_STARTED.md  LESSONS_CREATED.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  README.md
dstutor/: __init__.py
dstutor/core/: extension.py  tutor_engine.py  validator.py
dstutor/curriculum/: lesson_loader.py
dstutor/llm/: feedback_engine.py
dstutor/ui/: cell_injector.py  widgets.py
dstutor/utils/: progress_tracker.py
lessons/foundations/matplotlib/: matplotlib_01_basics.yaml  matplotlib_02_scatter_plots.yaml  matplotlib_03_bar_charts.yaml  matplotlib_04_subplots.yaml  matplotlib_05_histograms.yaml  matplotlib_06_heatmaps.yaml  matplotlib_07_box_plots.yaml  matplotlib_08_styling.yaml  matplotlib_09_seaborn.yaml  matplotlib_10_saving.yaml
lessons/foundations/numpy/: numpy_01_array_creation.yaml  numpy_02_array_functions.yaml  numpy_03_indexing_slicing.yaml  numpy_04_array_operations.yaml  numpy_05_reshaping.yaml  numpy_06_statistics.yaml  numpy_07_boolean_indexing.yaml  numpy_08_broadcasting.yaml  numpy_09_random.yaml  numpy_10_linear_algebra.yaml
notebooks/: 01_getting_started.ipynb
src/core/: extension.py  tutor_engine.py  validator.py
src/curriculum/: lesson_loader.py
src/ui/: cell_injector.py  widgets.py
tests/: README.md
(+25 files in other folders)
